[package]
name = "my_halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example1"
path = "src/test.rs"

[dependencies]
halo2_proofs = "0.3.0"
criterion = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
plotters = { version = "0.3.0"}
ff = "0.13"


